--- a/3.0/HSSim/HSSim.csproj
+++ b/3.0/HSSim/HSSim.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Hero.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Abstract Cards\Minions\AuraMinions.cs" />
+    <Compile Include="MinHeap.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
