Add Druid and Priest. Add support for 'this turn only' effects

--- a/3.0/HSSim/HSSim.csproj
+++ b/3.0/HSSim/HSSim.csproj
@@ -38,6 +38,8 @@
   <ItemGroup>
     <Compile Include="Abstract Cards\Minions\BattlecryMinions.cs" />
     <Compile Include="Abstract Cards\Minions\EndOfTurnMinions.cs" />
+    <Compile Include="Classes\Druid.cs" />
+    <Compile Include="Classes\Priest.cs" />
     <Compile Include="Classes\Shaman.cs" />
     <Compile Include="Classes\Warrior.cs" />
     <Compile Include="Classes\Hunter.cs" />
