SetHeroPower for Shaman added

--- a/3.0/HSSim/HSSim.csproj
+++ b/3.0/HSSim/HSSim.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Abstract Cards\Minions\EndOfTurnMinions.cs" />
     <Compile Include="Classes\Druid.cs" />
     <Compile Include="Classes\Priest.cs" />
+    <Compile Include="Classes\Rogue.cs" />
     <Compile Include="Classes\Shaman.cs" />
     <Compile Include="Classes\Warrior.cs" />
     <Compile Include="Classes\Hunter.cs" />
